--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
-<!-- Mirrored from rayhan-theme.netlify.com/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 22 Feb 2020 14:31:28 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+  
 <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +9,7 @@
         <meta name="keywords" content="Html, Css, jQuery, JavaScript, Rayhan, onepage, personal, Portfolio, design, creative, template, responsive">
         
         <!-- Title -->
+         <!-- Title -->
         <title>Rayhan - Responsive One Page Portfolio Template</title>
         <!-- Favicon --> 
         <link rel="icon" href="images/icon.png">
